--- a/Main.html
+++ b/Main.html
@@ -320,7 +320,7 @@
     <div class="topnav-links">
       <a href="Main.html">Library</a>
       <a href="Reader.html">Reader</a>
-      <a href="Account.html" class="btn-account">My Account</a>
+      <a href="Account.html" class="btn-account">Account</a>
     </div>
   </nav>
 
