--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
     <div class="topnav-links">
       <a href="Main.html">Library</a>
       <a href="Reader.html">Reader</a>
-      <a href="Account.html" class="btn-account">My Account</a>
+      <a href="Account.html" class="btn-account">Account</a>
     </div>
   </nav>
 
@@ -675,7 +675,7 @@ function unlockBook(book) {
   setTimeout(() => openReader(book), 900);
 }
 
-// ── CORS Proxy (must match reader.html) ───────────────────────
+// ── CORS Proxy (must match Reader.html) ───────────────────────
 const CORS_PROXY = 'https://your-proxy.YOUR-SUBDOMAIN.workers.dev';
 
 // ── URL normaliser ────────────────────────────────────────────
@@ -700,7 +700,7 @@ function openReader(book) {
   const normalised = normaliseLbkUrl(book.file || '');
   const bookToPass = { ...book, file: normalised || book.file }; // keep original if normalised is null
   sessionStorage.setItem('pending_book', JSON.stringify(bookToPass));
-  nav('reader.html');
+  nav('Reader.html');
 }
 
 // ── Modal helpers ─────────────────────────────────────────────
