--- a/Account.html
+++ b/Account.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>The Shelf — My Account</title>
+<title>LiveKitaab — My Account</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;900&family=Lora:ital,wght@0,400;0,500;1,400&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 <style>
@@ -280,7 +280,7 @@
 
   <!-- Top nav -->
   <nav class="topnav">
-    <a class="topnav-brand" href="#" data-page="Main.html">✦ The Shelf</a>
+    <a class="topnav-brand" href="#" data-page="library.html"><span style="color:#ffffff;font-family:'Playfair Display',serif;font-size:1.2rem;font-weight:700;">Live</span><span style="color:#f7e7b5;font-family:'Playfair Display',serif;font-size:1.2rem;font-weight:700;">Kitaab</span></a>
     <div class="topnav-links">
       <a href="#" data-page="Main.html">Library</a>
       <a href="#" data-page="Reader.html">Reader</a>
@@ -291,7 +291,7 @@
   <!-- ── LOGGED-OUT VIEW ───────────────────────────────────── -->
   <div id="authView">
     <div class="auth-banner">
-      <h1>Welcome to The Shelf</h1>
+      <h1>Welcome to <span style="color:#fff;display:inline;">Live</span><span style="color:#fff;display:inline;">Kitaab</span></h1>
       <p>Sign in to access your library &amp; purchased books</p>
     </div>
 
@@ -421,13 +421,12 @@
 //  It looks exactly like the object below.
 // ══════════════════════════════════════════════════════════════
 const FIREBASE_CONFIG = {
-  apiKey: "AIzaSyAOUx2hi5LMebUVc_vlGQ_QEkBeMjQaaMo",
-  authDomain: "livekitaab.firebaseapp.com",
-  projectId: "livekitaab",
-  storageBucket: "livekitaab.firebasestorage.app",
-  messagingSenderId: "387850236053",
-  appId: "1:387850236053:web:babf8596ac3841aeddeb9c",
-  measurementId: "G-1RY50RP54G"
+  apiKey:            "PASTE_YOUR_apiKey_HERE",
+  authDomain:        "PASTE_YOUR_authDomain_HERE",
+  projectId:         "PASTE_YOUR_projectId_HERE",
+  storageBucket:     "PASTE_YOUR_storageBucket_HERE",
+  messagingSenderId: "PASTE_YOUR_messagingSenderId_HERE",
+  appId:             "PASTE_YOUR_appId_HERE",
 };
 
 // ── Init Firebase ────────────────────────────────────────────
