--- a/Account.html
+++ b/Account.html
@@ -420,13 +420,14 @@
 //  Get it from: Firebase Console → Project Settings → Your Apps
 //  It looks exactly like the object below.
 // ══════════════════════════════════════════════════════════════
-const FIREBASE_CONFIG = {
-  apiKey:            "PASTE_YOUR_apiKey_HERE",
-  authDomain:        "PASTE_YOUR_authDomain_HERE",
-  projectId:         "PASTE_YOUR_projectId_HERE",
-  storageBucket:     "PASTE_YOUR_storageBucket_HERE",
-  messagingSenderId: "PASTE_YOUR_messagingSenderId_HERE",
-  appId:             "PASTE_YOUR_appId_HERE",
+const firebaseConfig = {
+  apiKey: "AIzaSyAOUx2hi5LMebUVc_vlGQ_QEkBeMjQaaMo",
+  authDomain: "livekitaab.firebaseapp.com",
+  projectId: "livekitaab",
+  storageBucket: "livekitaab.firebasestorage.app",
+  messagingSenderId: "387850236053",
+  appId: "1:387850236053:web:babf8596ac3841aeddeb9c",
+  measurementId: "G-1RY50RP54G"
 };
 
 // ── Init Firebase ────────────────────────────────────────────
