--- a/Account.html
+++ b/Account.html
@@ -431,7 +431,7 @@ const firebaseConfig = {
 };
 
 // ── Init Firebase ────────────────────────────────────────────
-firebase.initializeApp(FIREBASE_CONFIG);
+firebase.initializeApp(firebaseConfig);
 const auth = firebase.auth();
 const db   = firebase.firestore();
 
