--- a/Reader.html
+++ b/Reader.html
@@ -670,7 +670,7 @@ function escHtml(s) {
 // We route them through a Cloudflare Worker you deploy once — it's free and
 // handles files of any size. See the deployment guide for setup instructions.
 // Once deployed, paste your worker URL here:
-const CORS_PROXY = 'https://lbk-proxy.acjee2059.workers.dev/';
+const CORS_PROXY = 'https://web-production-a6ac9.up.railway.app/proxy?url=';
 
 // ── URL resolver ──────────────────────────────────────────────
 // Returns the best fetchable URL. Rewrites GitHub patterns, proxies releases.
