--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
     <div class="gif-grid">
       <!-- REPLACE src="" with your actual GIF URLs -->
       <div class="gif-card reveal">
-        <img src="https://github.com/livekitaab/livekitaab.github.io/blob/614026b01c42ac13a33adde7a32e656528625889/Proof%20of%20Concept%202.gif" alt="LiveKitaab reading experience"
+        <img src="https://raw.githubusercontent.com/livekitaab/livekitaab.github.io/library/main/Proof.Of.Concept.2.gif" alt="LiveKitaab reading experience"
              onerror="this.src='https://images.unsplash.com/photo-1456513080510-7bf3a84b82f8?w=800&q=80'">
         <div class="gif-overlay">
           <div class="gif-caption">
